--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <br> 
             si vous souhaite me contactez veuillez cliquée sur le lien suivent 
                 <a href="contact.html">lien vers mon formulaires</a>
+                <p>Si vous souhaitez visitez mon site web <a href="carte/carte.html">Mon site</a></p>
             
         </body>
 </html>
