--- a/carte/carte.html
+++ b/carte/carte.html
@@ -53,7 +53,7 @@
 
 <h2>Choisissez une catégorie</h2>
 <button onclick="showAgents('attaquants')">Attaquants</button>
-<button onclick="showAgents('défenseurs')">Défenseurs</button>
+<button onclick="showAgents('defenseurs')">Défenseurs</button>
 
 <div id="agents" class="container">
     <h2 id="categoryTitle"></h2>
