--- a/arthurd.html.html
+++ b/arthurd.html.html
@@ -168,5 +168,8 @@
         Pour toute question, veuillez vous adresser sur notre discord avec ce programme
         <p>Si vous souhaitez revenir vers mon site cliquez sur le lien suivant: <a href="carte/carte.html">Mon site</a></p>
     </footer>
+    <script type="text/javascript">
+        document.write("Hello world");
+        </script>
 </body>
 </html>
