--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3>Formation et compétence</h3>
             <br> 
             si vous souhaite me contactez veuillez cliquée sur le lien suivent 
-                <a href="contact.html">lien vers mon formulaires</a>
+                <a href="arthurd.html.html">lien vers mon formulaires</a>
                 <p>Si vous souhaitez visitez mon site web <a href="carte/carte.html">Mon site</a></p>
             
         </body>
