--- a/arthurd.html
+++ b/arthurd.html
@@ -28,14 +28,12 @@
             const resultat = document.getElementById("resultat");
 
             if (reponse === bonneReponse) {
-                resultat.textContent = "Félicitations ! Vous avez trouvé la bonne réponse.";
-            }
-            else if {reponse == 0
-                
+                resultat.textContent = "Félicitations ! Vous avez trouvé la bonne réponse.";            
             }
 
              else {
                 resultat.textContent = "Désolé, ce n'est pas la bonne réponse. Essayez encore !";
+                document.getElementById("reponse").value = "";
             }
             
         }
